# ckb-simple-account-layer

./: .eslintrc.js  .gitignore  .travis.yml  COPYING  Makefile  README.md  build_testdata.sh  package-lock.json  package.json
c/: fullstorage.h  generator.h  utils.h  validator.h
c/tests/: main.c
c/vms/dummy/: dummy_vm.c
crates/layer/: Cargo.toml
crates/layer/src/: ckb.rs  lib.rs  smt.rs  vm.rs
crates/layer/testdata/: always_success.S  dummy_smt_generator
crates/layer/tests/: tests_run.rs
native/: Cargo.toml
native/src/: lib.rs
native/testdata/: dummy_smt_generator  dummy_smt_validator
native/tests/: tests_run.rs
tests/: smt.js
