[package]
name = "ckb-simple-account-layer"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = { version = "0.1" }
bytes = "0.5.4"
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.31.0-pre1" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.31.0-pre1" }
ckb-vm = { version = "0.19.1", features = ["asm"] }
derive_more = "0.99.2"
replace_with = "0.1.5"
sparse-merkle-tree = "0.3"

[dev-dependencies]
hex = "0.4.2"
